--- a/Melodify Frontend/user/index.html
+++ b/Melodify Frontend/user/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Melodify</title>
-    <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/album.css">
+    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="../style/collection.css">
     <link rel="stylesheet" href="../style/search.css">
     <link rel="stylesheet" href="../style/controls.css">
 
@@ -32,6 +32,21 @@
         }
     </script>
 
+    <script>
+        window.addEventListener('message', event => {
+            if (event.origin !== 'http://localhost:8080') {
+                console.log("Event origin was "+ event.origin);
+                return;
+            }
+
+            const data = event.data;
+            if (data.action === 'navigateToArtist') {
+                // const artistId = data.artistId;
+                document.querySelector("#player_controls .fa-circle-play").click();
+            }
+        });
+    </script>
+
 </head>
 <body onload="preventRedirect()">
 <main>
@@ -40,8 +55,8 @@
             <h1><span class="fa fa-compact-disc"></span>Melodify</h1>
         </div>
         <div id="quick_actions">
-            <button onclick="navigate('./search.html')"><span class="fa fa-search"></span>Search</button>
-            <button onclick="navigate('./home.html')"><span class="fa fa-house"></span>Home</button>
+            <button onclick="navigate('./search.html', false)"><span class="fa fa-search"></span>Search</button>
+            <button onclick="navigate('./home.html', false)"><span class="fa fa-house"></span>Home</button>
         </div>
         <div id="library">
             <div id="library_actions">
@@ -54,247 +69,7 @@
             </div>
         </div>
     </div>
-    <div id="content">
-        <div id="search">
-            <div id="search_criteria">
-                <h1>Search</h1>
-                <div>
-                    <input type="search" placeholder="Search here">
-                    <button type="submit"><span class="fa fa-search"></span></button>
-                    <div id="search_filters">
-                        <button>Artists</button>
-                        <button>Albums</button>
-                        <button>Songs</button>
-                    </div>
-                </div>
-            </div>
-            <div id="search_results">
-                <div id="artist_search_results">
-                    <h2>Artists</h2>
-                    <div class="items">
-                        <div class="item artist">
-                            <img src="./../prince%20michael.jpg">
-                            <p>Elton John</p>
-                        </div>
-                        <div class="item artist">
-                            <img src="./../prince%20michael.jpg">
-                            <p>Elton John</p>
-                        </div>
-                    </div>
-                </div>
-                <div id="album_search_results">
-                    <h2>Albums</h2>
-                    <div class="items">
-                        <div class="item">
-                            <img src="./../album.jpg">
-                            <div class="info">
-                                <p class="name">Album</p>
-                                <p class="author">Artists</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="./../album.jpg">
-                            <div class="info">
-                                <p class="name">Album</p>
-                                <p class="author">Artists</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="song_search_results">
-                    <h2>Songs</h2>
-                    <div class="items">
-                        <div class="item">
-                            <img src="./../album.jpg">
-                            <div class="info">
-                                <p class="name">Song name</p>
-                                <p class="author">Album name, Artist name</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="./../album.jpg">
-                            <div class="info">
-                                <p class="name">Song name</p>
-                                <p class="author">Album name, Artist name</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="home" style="display: none">
-            <h2>Welcome</h2>
-        </div>
-        <div id="album" style="display: none">
-            <div class="media-banner">
-                <img src="./../album.jpg">
-                <div class="media-metadata">
-                    <h1>AlbumName</h1>
-                    <div class="additional_info">
-                        <div class="artist-info">
-                            <img src="../prince%20michael.jpg">
-                            <p>Artist Name</p>
-                        </div>
-                        <p></p>
-                        <p>01.01.1991</p>
-                    </div>
-                </div>
-            </div>
-            <div class="song_list">
-                <table>
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Title</th>
-                        <th>Duration</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button>1</button>
-                        </td>
-                        <td>
-                            <p class="table-song">Song one</p>
-                            <p class="table-artist">Artist name</p>
-                        </td>
-                        <td>3:14</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+        <iframe id="content" src="./home.html"></iframe>
     <div id="queue">
         <h2><span class="fa fa-list"></span>Queue</h2>
         <div class="items">
@@ -333,7 +108,7 @@
             <span class="fa fa-volume-low"></span>
             <input type="range" min="0" max="1" step="0.1">
         </div>
-        <img src="./../prince%20michael.jpg" onclick="navigate('./profile.html')">
+        <img src="./../prince%20michael.jpg" onclick="navigate('./profile.html', false)">
     </div>
 </div>
 </body>
